# Agregator-Events-Provider-API

./: Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
scripts/: run.sh
src/: main.py
src/application/: exceptions.py
src/application/dtos/: event.py  pagination.py  place.py  ticket.py
src/application/usecases/: __init__.py  base.py  event.py
src/application/usecases/event/: event.py
src/application/usecases/ticket/: ticket.py
src/config/: config.py  db_config.py
src/infrastructure/: di.py
src/infrastructure/clients/: event_provider.py
src/infrastructure/clients/events/: paginator.py  provider.py
src/infrastructure/db/: exeptions.py  session.py  uow.py
src/infrastructure/db/models/: base.py  event.py  mixins.py  place.py  sync_meta.py  ticket.py
src/infrastructure/db/models/event/: __init__.py  event.py  status.py
src/infrastructure/db/models/sync/: meta.py  status.py
src/infrastructure/db/repositories/: event.py  place.py  sync_meta.py  ticket.py
src/migration/: env.py
src/migration/versions/: 3c4feebf7ad8_initial.py  3c4feebf7ad8_stub.py  3d70243c95a1_initial_schema_v3.py  8e5245334c49_auto_initial_schema.py  8e5245334c49_real_initial_schema.py  stub_3c4.py
src/presentation/api/: lifespan.py
src/presentation/api/rest/: __init__.py  handlers.py  router.py
src/presentation/api/rest/v1/controllers/: events.py  health_check.py  sync.py  ticket.py
src/tests/: test_client.py  test_paginator.py
