[project]
name = "agregatoreventsproviderapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "async-lru>=2.3.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]


[tool.mypy]
strict = true
